k8s/apps/dashboard/hajimari/app/np.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: hajimari-np
  namespace: dashboard
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hajimari  # Apply to all pods in this namespace
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - {}
